crates/biome_js_parser/tests/js_test_suite/ok/conditional_async_destructured_arrow_return_type.ts
const queryAuditLog = async ({
  startDate,
  endDate,
  jobId,
  src,
  type,
}: Filter): Promise<DBAuditLog[]> => {};
