crates/biome_js_parser/tests/js_test_suite/error/type_arguments_missing.ts
func<>();
type Foo = Bar<>;
type Foo = Bar<,>;
